fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
   --GREY_2: rgb(153, 153, 153);
   --GREEN: rgb(106, 205, 104);
   font-size: 12px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   width: 100%;
   position: relative;
 }
@@ -46,7 +46,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
   position: relative;
-  /* display: flex; */
+  overflow-x: hidden !important;
+  display: flex;
 }
 
 @media (max-width: 1024px) {
